feat: book